8131734: assert(!is_null(v)) failed: narrow klass value can never be zero with -Xshared:auto

Handle shared string mapping failures.

Co-authored-by: Tom Benson <tom.benson@oracle.com>
Reviewed-by: tschatzl, kbarrett, ddmitriev, hseigel